--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
-
-  font-family: "Roboto";
-  font-size: 22px;
+    margin: 10px;
+    font-family: "Roboto";
+    font-size: 22px;
+}
 
 canvas {
-  display: block;
+    display: block;
 }
